--- a/assets/style.css
+++ b/assets/style.css
@@ -1,67 +1,64 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-:root{
-  --card-title-border-color:#746615;
+:root {
+  --card-title-border-color: #746615;
   --card-color-primary: #f7dd43;
   --card-bg-color: #1d1c19;
-  --bg-color :url(./bg_yellow.svg);
+  --bg-color: url(./bg_yellow.svg);
 }
 
-body.blue{
+body.blue {
   --card-title-border-color: #338af3;
   --card-color-primary: #338af3;
   --card-bg-color: #202024;
   --bg-color: url(./bg_blue.svg);
 }
-body.green{
-  --card-title-border-color: #047C3F;
-  --card-color-primary: #047C3F;
+body.green {
+  --card-title-border-color: #047c3f;
+  --card-color-primary: #047c3f;
   --card-bg-color: #1d1c19;
   --bg-color: url(./bg_green.svg);
 }
 
-
-body{
+body {
   background-color: #121214;
-  background-image:var(--bg-color);
+  background-image: var(--bg-color);
   background-repeat: no repeat;
   background-position: top center;
-  background-size:cover;
-  }
-
-body *{
-  font-family: 'Roboto', sans-serif;
+  background-size: cover;
 }
 
+body * {
+  font-family: "Roboto", sans-serif;
+}
 
-#app{
+#app {
   width: fit-content;
   margin: auto;
   padding-top: 52px;
 }
 
-header{
+header {
   margin-bottom: 63px;
   text-align: center;
 }
 
-.card{
+.card {
   padding: 32px 23px;
   text-align: center;
   background: var(--card-bg-color);
   border-bottom: 2px solid var(--card-color-primary);
   border-radius: 6px;
-
 }
 
-.card h2{
+.card h2 {
   display: flex;
   gap: 16px;
   justify-content: center;
@@ -70,21 +67,20 @@ header{
   padding: 8px 16px;
   border: 1px solid var(--card-title-border-color);
   border-radius: 6px;
-  
+
   width: fit-content;
   margin-inline: auto;
   margin-bottom: 53px;
 
-  color:#f7dd43;
-  
+  color: #f7dd43;
 }
 
-.card h2 span{
-  color:#e1e1e6;
+.card h2 span {
+  color: #e1e1e6;
   font-size: 14px;
   text-transform: uppercase;
 }
-.card ul{
+.card ul {
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -92,26 +88,26 @@ header{
   width: 270px;
 }
 
-.card ul li{
+.card ul li {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.card ul li + li{  /*item de lista logo depois da anteriormente editada */
+.card ul li + li {
+  /*item de lista logo depois da anteriormente editada */
   padding-top: 24px;
-  border-top:1px solid #323238;
-
+  border-top: 1px solid #323238;
 }
 
-.card ul li strong{
+.card ul li strong {
   font-weight: 800;
   font-size: 36px;
   line-height: 125%;
-  color:#e1e1e6;
+  color: #e1e1e6;
 }
 
-#cards{
+#cards {
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -119,37 +115,44 @@ header{
 
 .card h2:hover,
 .card ul li strong:hover, /*quando colcoarmos o mouse em cima da imagem, vai acontecer alguma animação/transição selecionada no css*/
-.card ul li img:hover{
+.card ul li img:hover {
   transform: scale(1.1);
 }
 
 .card h2:hover,
 .card ul li strong,
-.card ul li img{
-  transition: transform 0.3s;
+.card ul li img {
+  transition: transform 0.2s;
 }
 
-.card{
-  animation: appear 1s forwards;
+.card {
+  opacity: 0;
+  animation: appear 0.7s forwards;
 }
 
+.card:nth-child(2) {
+  animation-delay: 1s;
+}
 
+.card:nth-child(3) {
+  animation-delay: 1s;
+}
 
-@keyframes appear{
-  0%{
+@keyframes appear {
+  0% {
     transform: translateY(-50px);
     opacity: 0;
   }
-  100%{
-
+  100% {
     opacity: 1;
   }
 }
 
-@media (min-width: 1300px){/*responsividade cll, tela grande e pc*/
-  #cards{
+@media (min-width: 1300px) {
+  /*responsividade cll, tela grande e pc*/
+  #cards {
     max-width: 670px;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction:row;
+    flex-wrap:nowrap;
   }
 }
