--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 32px;
-  align:center;
+  justify-content:center;
 }
 
 .card h2:hover,
